# doom-nukem-builder

./: CMakeCache.txt  CMakeLists.txt  Makefile  README  READ_ME  add_door.c  add_to_media.c  asset_paths.txt  builder  builder.cbp  builder.h  buttons.c  cmake_install.cmake  delete_from_media.c  delete_sector.c  delete_vector.c  delete_world.c  drawing.c  edit_door.c  edit_menu.c  edit_walls.c  editor.c  file_fun.c  fill_grid.c  fill_polygon.c  find_in_media.c  font.c  game_info.txt  get_assets.c  get_input.c  get_next_line.c  get_next_line.h  get_sec_items.c  get_sec_v.c  grid_main.c  init_editor_buttons.c  items.c  level_edit.c  levels.c  line_math.c  (+30 more)
builder_src/: btn_press.c  btn_press_settings.c  builder.h  drawing.c  edit_menu.c  editor.c  editor_update.c  get_map_elems.c  get_sec_items.c  levels.c  light_sec_type.c  main.c  manage_btn.c  modes.c  move_item.c  render_btn.c  render_grid.c  render_grid_elems.c  sel_item.c  settings.c  settings_help.c  states.c  texture_edit.c  textures.c  values.c  write_section.c
doom_src/: item_loader.c  light_source_worker.c  sdl_head.h
frameworks/SDL2.framework/Versions/A/Headers/: SDL_gamecontroller.h  SDL_hints.h  SDL_joystick.h  SDL_messagebox.h  SDL_mouse.h  SDL_opengl_glext.h
libft/: ft_atoi.c  ft_bzero.c  ft_digittoint.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isprint.c  ft_isupper.c  ft_iswhspace.c  ft_isxdigit.c  ft_itoa.c  ft_lstadd.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcasecmp.c  ft_strcat.c  ft_strcpy.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strsplit.c  ft_strsub.c  ft_strtrim.c  ft_strulen.c  (+2 more)
media/: g
media (copy)/maps/: level_0.txt  level_1.txt
media (copy)/test/: level_1.txt
media/maps/: dungeon.txt  fortress.txt  graveyard.txt  hell.txt  level_0.txt  level_1.txt  level_2.txt  map_one  new  new.txt  new_level.txt  new_level23.txt  new_level_0  new_level_0.txt  new_level_1.txt  new_map.txt  newhjhjd.txt  throneroom  tower.txt
media/test/: F.txt.txt  level_0.txt
media/textures/bones/: info.txt
media/textures/broken_tree/: info.txt
media/textures/broken_tree_two/: info.txt
media/textures/demon/: info.txt
media/textures/firewall/: info.txt
media/textures/imp/: info.txt
media/textures/largefire/: info.txt
media/textures/new_demon/: info.txt
media/textures/pentagram/: info.txt
media/textures/pool_blood/: info.txt
media/textures/skull/: info.txt
media/textures/skullbox/: info.txt
other/libft/: Makefile  author  ft_abs_cut.c  ft_count_words.c  ft_isdigit.c  ft_islower.c  ft_isspace.c  ft_lstdel.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putendl.c  ft_putnbr.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strdel.c  ft_strequ.c  ft_striter.c  ft_strmap.c  ft_strmapi.c  ft_strncat.c  ft_strncpy.c  ft_strnequ.c  ft_strnew.c  ft_strrchr.c  ft_strstr.c  ft_tolower.c
src/: add_door.c  add_door_help.c  add_sector.c  add_to_media.c  break_wall.c  btn_main.c  btn_press.c  btn_press_settings.c  builder.h  char_ops.c  delete_sector.c  delete_world.c  distribute_btns.c  draw_line.c  drawing.c  drawing_help.c  edit_menu.c  edit_walls.c  edit_walls_help.c  edit_world.c  editor.c  editor_render.c  editor_update.c  fill_grid.c  fill_polygon.c  free_media.c  get_assets.c  get_boxes.c  get_input.c  get_map.c  get_map_elems.c  get_next_line.h  get_sec_items.c  get_sec_v.c  grid_main.c  grid_ops.c  identify.c  init_editor_buttons.c  levels.c  levels_btn.c  (+43 more)
